@@ -34,18 +34,19 @@ using System.Runtime.InteropServices;
 using Tao.OpenGl;
 using Tao.FreeGlut;
 
+using Cumberland;
+using Cumberland.Drawing;
 using Cumberland.GluWrap;
 
 namespace Cumberland.Drawing.OpenGL
 {
-	public class OpenGLMap : Map
+	public class OpenGlMapDrawer : IMapDrawer
 	{
-		
 		List<int> glList = new List<int>();
 
 #region Methods
 				
-		public Bitmap Draw()
+		public Bitmap Draw(Map map)
 		{
 			int[] temp = new int[1];
 			int fbo = -1;
@@ -84,7 +85,7 @@ namespace Cumberland.Drawing.OpenGL
 //				Gl.glGenRenderbuffersEXT(1, temp);
 //				depthBuffer = temp[0];
 //				Gl.glBindRenderbufferEXT(Gl.GL_RENDERBUFFER_EXT, depthBuffer);
-//				Gl.glRenderbufferStorageEXT(Gl.GL_RENDERBUFFER_EXT, Gl.GL_DEPTH_COMPONENT, Width, Height);	
+//				Gl.glRenderbufferStorageEXT(Gl.GL_RENDERBUFFER_EXT, Gl.GL_DEPTH_COMPONENT, map.Width, map.Height);	
 //				Gl.glFramebufferRenderbufferEXT(Gl.GL_FRAMEBUFFER_EXT, Gl.GL_DEPTH_ATTACHMENT_EXT, Gl.GL_RENDERBUFFER_EXT, depthBuffer);
 								
 				//  get render buffer from opengl
@@ -98,9 +99,9 @@ namespace Cumberland.Drawing.OpenGL
 //				System.Console.WriteLine(temp[0]);
 				
 				// allocate memory
-				Gl.glRenderbufferStorageEXT(Gl.GL_RENDERBUFFER_EXT, Gl.GL_RGBA, Width, Height);
-				//Gl.glRenderbufferStorageMultisampleEXT(Gl.GL_RENDERBUFFER_EXT, 16, Gl.GL_RGBA, Width, Height);
-				//Gl.glRenderbufferStorageMultisampleCoverageNV(Gl.GL_RENDERBUFFER_EXT, 4, 16, Gl.GL_RGBA, Width, Height);
+				Gl.glRenderbufferStorageEXT(Gl.GL_RENDERBUFFER_EXT, Gl.GL_RGBA, map.Width, map.Height);
+				//Gl.glRenderbufferStorageMultisampleEXT(Gl.GL_RENDERBUFFER_EXT, 16, Gl.GL_RGBA, map.Width, map.Height);
+				//Gl.glRenderbufferStorageMultisampleCoverageNV(Gl.GL_RENDERBUFFER_EXT, 4, 16, Gl.GL_RGBA, map.Width, map.Height);
 				
 				// attach render buffer to fbo
 				Gl.glFramebufferRenderbufferEXT(Gl.GL_FRAMEBUFFER_EXT, Gl.GL_COLOR_ATTACHMENT0_EXT, Gl.GL_RENDERBUFFER_EXT, colorBuffer);
@@ -112,44 +113,44 @@ namespace Cumberland.Drawing.OpenGL
 					string fbErr = "Unknown Error";
 
 					switch (fboState)
-	                {
-	                    case Gl.GL_FRAMEBUFFER_INCOMPLETE_ATTACHMENT_EXT:
-	                        fbErr = "Framebuffer has an incomplete attachment";
-	                        break;
-	                    case Gl.GL_FRAMEBUFFER_INCOMPLETE_DIMENSIONS_EXT:
-	                        fbErr = "Framebuffer has wrong dimensions";
-	                        break;
-	                    case Gl.GL_FRAMEBUFFER_INCOMPLETE_DRAW_BUFFER_EXT:
-	                        fbErr = "Framebuffer has incomplete draw buffer";
-	                        break;
-	                    case Gl.GL_FRAMEBUFFER_INCOMPLETE_FORMATS_EXT:
-	                        fbErr = "Framebuffer has incomplete formats";
-	                        break;
-	                    case Gl.GL_FRAMEBUFFER_INCOMPLETE_LAYER_COUNT_EXT:
-	                        fbErr = "Framebuffer has wrong layer count";
-	                        break;
-	                    case Gl.GL_FRAMEBUFFER_INCOMPLETE_LAYER_TARGETS_EXT:
-	                        fbErr = "Framebuffer has wrong layer targets";
-	                        break;
-	                    case Gl.GL_FRAMEBUFFER_INCOMPLETE_MISSING_ATTACHMENT_EXT:
-	                        fbErr = "Framebuffer has missing attachment";
-	                        break;
-	                    case Gl.GL_FRAMEBUFFER_INCOMPLETE_MULTISAMPLE_EXT:
-	                        fbErr = "Framebuffer has multisample error";
-	                        break;
-	                    case Gl.GL_FRAMEBUFFER_INCOMPLETE_READ_BUFFER_EXT:
-	                        fbErr = "Framebuffer has incomplete readbuffer";
-	                        break;
-	                    case Gl.GL_FRAMEBUFFER_UNSUPPORTED_EXT:
-	                        fbErr = "Framebuffer is unsupported";
-	                        break;
-	                }
+					{
+					    case Gl.GL_FRAMEBUFFER_INCOMPLETE_ATTACHMENT_EXT:
+					        fbErr = "Framebuffer has an incomplete attachment";
+					        break;
+					    case Gl.GL_FRAMEBUFFER_INCOMPLETE_DIMENSIONS_EXT:
+					        fbErr = "Framebuffer has wrong dimensions";
+					        break;
+					    case Gl.GL_FRAMEBUFFER_INCOMPLETE_DRAW_BUFFER_EXT:
+					        fbErr = "Framebuffer has incomplete draw buffer";
+					        break;
+					    case Gl.GL_FRAMEBUFFER_INCOMPLETE_FORMATS_EXT:
+					        fbErr = "Framebuffer has incomplete formats";
+					        break;
+					    case Gl.GL_FRAMEBUFFER_INCOMPLETE_LAYER_COUNT_EXT:
+					        fbErr = "Framebuffer has wrong layer count";
+					        break;
+					    case Gl.GL_FRAMEBUFFER_INCOMPLETE_LAYER_TARGETS_EXT:
+					        fbErr = "Framebuffer has wrong layer targets";
+					        break;
+					    case Gl.GL_FRAMEBUFFER_INCOMPLETE_MISSING_ATTACHMENT_EXT:
+					        fbErr = "Framebuffer has missing attachment";
+					        break;
+					    case Gl.GL_FRAMEBUFFER_INCOMPLETE_MULTISAMPLE_EXT:
+					        fbErr = "Framebuffer has multisample error";
+					        break;
+					    case Gl.GL_FRAMEBUFFER_INCOMPLETE_READ_BUFFER_EXT:
+					        fbErr = "Framebuffer has incomplete readbuffer";
+					        break;
+					    case Gl.GL_FRAMEBUFFER_UNSUPPORTED_EXT:
+					        fbErr = "Framebuffer is unsupported";
+					        break;
+					}
 
 					throw new InvalidOperationException("Framebuffer Error: " + fbErr);
 				}
 				
 				// acquire the proper space
-				Gl.glViewport(0, 0, Width, Height);
+				Gl.glViewport(0, 0, map.Width, map.Height);
 				
 				// clear out
 				Gl.glClearColor(1f, 1f, 1f, 0f);
@@ -159,10 +160,10 @@ namespace Cumberland.Drawing.OpenGL
 				Gl.glMatrixMode(Gl.GL_PROJECTION);
 				Gl.glLoadIdentity();
 				
-				Rectangle r = Extents.Clone();
+				Rectangle r = map.Extents.Clone();
 
 				// set aspect ratio to image to avoid distortion
-				r.AspectRatioOfWidth = Width / Height;
+				r.AspectRatioOfWidth = map.Width / map.Height;
 
 				// set projection matrix to our extents				
 				Gl.glOrtho(r.Min.X, r.Max.X, r.Min.Y, r.Max.Y, 0, 1);
@@ -174,12 +175,12 @@ namespace Cumberland.Drawing.OpenGL
 				Gl.glDisable(Gl.GL_DEPTH_TEST);
 				
 				// render here
-				Render(false);
+				Render(map, false);
 						
 				// acquire the pixels from openGL and draw to bitmap
-				b = new Bitmap(Width, Height, PixelFormat.Format32bppArgb);
-				BitmapData bd = b.LockBits(new System.Drawing.Rectangle(0, 0, Width, Height), ImageLockMode.WriteOnly, PixelFormat.Format32bppArgb);
-				Gl.glReadPixels(0, 0, Width, Height, Gl.GL_BGRA, Gl.GL_UNSIGNED_BYTE, bd.Scan0);
+				b = new Bitmap(map.Width, map.Height, PixelFormat.Format32bppArgb);
+				BitmapData bd = b.LockBits(new System.Drawing.Rectangle(0, 0, map.Width, map.Height), ImageLockMode.WriteOnly, PixelFormat.Format32bppArgb);
+				Gl.glReadPixels(0, 0, map.Width, map.Height, Gl.GL_BGRA, Gl.GL_UNSIGNED_BYTE, bd.Scan0);
 				b.UnlockBits(bd);
 				b.RotateFlip(RotateFlipType.Rotate180FlipX);
 				
@@ -201,20 +202,20 @@ namespace Cumberland.Drawing.OpenGL
 			return b;
 		}
 		
-		public void Render(bool useGlList)
+		public void Render(Map map, bool useGlList)
 		{
 			ProjFourWrapper dst = null;
 			
 			try
 			{
 				// instantiate map projection
-				if (!string.IsNullOrEmpty(Projection))
+				if (!string.IsNullOrEmpty(map.Projection))
 				{
-					dst = new ProjFourWrapper(Projection);
+					dst = new ProjFourWrapper(map.Projection);
 				}
 								
 				int idx = -1;
-				foreach (Layer layer in Layers)
+				foreach (Layer layer in map.Layers)
 				{
 					idx++;
 					
